samples/_failures_safe/1761272983_8c9527_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_365531cb.c: In function ‘main’:
./samples/SAFE/__tmp_365531cb.c:153:16: error: missing terminating " character
  153 |         printf("Current State: %s, Data: %u, Processed: %u, Errors: %
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_365531cb.c:153:9: error: expected expression at end of input
  153 |         printf("Current State: %s, Data: %u, Processed: %u, Errors: %
      |         ^~~~~~
./samples/SAFE/__tmp_365531cb.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_365531cb.c:153:9: error: expected declaration or statement at end of input
